[jps-to-bazel] Use jvm_import rule (not java_import/kt_jvm_import) in LibKt#generateMavenLib
Also removes obsolete LibKt#isKotlinLib.

GitOrigin-RevId: 28e1b952f7e66ead7948823c75b8beb202f125fe